# coen424-f2025-a2

./: README.md  docker-compose.dev.yml  docker-compose.yml
api-gateway/: pyproject.toml
api-gateway/src/: main.py  schemas.py
event-system/: Dockerfile  pyproject.toml
event-system/src/: handlers.py  main.py  rabbit.py
order-service/src/: main.py  order_db.py  schemas.py
user-service-v1/: Dockerfile  pyproject.toml
user-service-v1/src/: main.py  rabbit.py
user-service-v2/: pyproject.toml
user-service-v2/src/: main.py
